# competitive-contest-355

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  format  validator.cpp
docs/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  checker_8cpp.html  checker_8cpp__incl.map  checker_8cpp__incl.md5  checker_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  checker_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  checker_8cpp_a261b5420e17ff6b4908171e2220d5cce_icgraph.map  checker_8cpp_a261b5420e17ff6b4908171e2220d5cce_icgraph.md5  checker_8cpp_a5658d4f0098d134fbb3f18f22a031bb0_cgraph.map  checker_8cpp_a5658d4f0098d134fbb3f18f22a031bb0_cgraph.md5  checker_8cpp_a5658d4f0098d134fbb3f18f22a031bb0_icgraph.map  checker_8cpp_a5658d4f0098d134fbb3f18f22a031bb0_icgraph.md5  checker_8cpp_source.html  class_buffered_file_input_stream_reader-members.html  class_buffered_file_input_stream_reader.html  class_buffered_file_input_stream_reader.js  class_buffered_file_input_stream_reader__coll__graph.md5  class_buffered_file_input_stream_reader__inherit__graph.map  class_buffered_file_input_stream_reader_a395d51259e292bcc9db8180b0941382c_cgraph.map  class_buffered_file_input_stream_reader_a395d51259e292bcc9db8180b0941382c_cgraph.md5  class_buffered_file_input_stream_reader_a468df465bd263e44be6b38df8a18cf07_cgraph.map  class_buffered_file_input_stream_reader_a468df465bd263e44be6b38df8a18cf07_cgraph.md5  (+833 more)
(+453 files in other folders)
